# wxModularAppOCX

.github/workflows/: wxGTK_Linux_GNU_x86_64.yml  wxGTK_x86_64.yml  wxMSW_MSBuild_x32.yml  wxMSW_MSBuild_x64.yml  wxMSW_x86_32_MSBuild.yml  wxMSW_x86_64_MSBuild.yml  wxOSX_arm64.yml  wxOSX_x86_64.yml
SampleGuiPlugin1/: CMakeLists.txt  SampleGuiPlugin1.cpp  SampleGuiPlugin1.def  SampleGuiPlugin1.h  SampleGuiPlugin1Exports.cpp  SampleGuiPluginWindow1.cpp  SampleGuiPluginWindow1.h
SampleGuiPlugin2/: CMakeLists.txt  SampleGuiPlugin2.cpp  SampleGuiPlugin2.def  SampleGuiPlugin2.h  SampleGuiPlugin2Exports.cpp  SampleGuiPluginWindow2.cpp  SampleGuiPluginWindow2.h
SampleNonGuiPlugin/: CMakeLists.txt  SampleNonGuiPlugin.def  SampleNonGuiPluginExports.cpp
mswplugin_csharp/: CMakeLists.txt  mswplugin_csharp.cs
mswplugin_vb/: mswplugin_vb.Designer.vb  mswplugin_vb.vb  mswplugin_vb.vbproj
mswplugin_vb/My Project/: AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb
plugin_Qt/: plugin_Qt.cpp
wxModularCore/: Auto.h  CMakeLists.txt  Declarations.h  PixelContainer.hpp  host_interaction.hpp  wxGuiPluginBase.cpp  wxGuiPluginBase.h  wxGuiPluginWindowBase.cpp  wxGuiPluginWindowBase.h  wxModularCore.cpp  wxModularCore.cpp.new  wxModularCore.h  wxModularCoreSettings.cpp  wxNonGuiPluginBase.h  wxPluginBase.h
wxModularHost/: CMakeLists.txt  MainFrame.cpp  MainFrame.h  SampleModularCore.cpp  SampleModularCore.h  wxModularHostApp.cpp  wxModularHostApp.h
